# AI-Assisted-Question-Mapping-Recommender

./: .copilot-instructions.md  .env.example  .gitignore  =0.2.2  DATA_UPDATE_SUMMARY.md  DEMO_RESULTS.md  DISPLAY_FIX_COMPLETE.md  HYBRID_RETRIEVAL_COMPLETE.md  HYBRID_RETRIEVAL_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RERANKER_IMPLEMENTATION.md  RSC Questions.xlsx.backup  RSC_UPDATE_288.md  START_HERE.md  TESTING_GUIDE.md  UI_FIX_COMPLETE.md  analyze_slcp_detailed.py  compare_providers_ui.md  convert_excel_to_json.py  convert_files.py  convert_new_files.py  convert_slcp_excel.py  debug_retrieval.py  demo_local_embeddings.py  fix_rsc_keys.py  load_new_slcp.py  map_all_questions.py  map_all_questions_enhanced.py  pyproject.toml  run_test_with_real_data.sh  slcp_data_dictionary.json  slcp_data_dictionary_new.json  start_ui.sh  start_ui_enhanced.sh  start_ui_hybrid.sh  start_ui_with_local_embeddings.sh  test_embeddings_interactive.py  (+11 more)
.claude/: settings.local.json
docs/superpowers/plans/: mapper-copilot-steps-4-10.md
scripts/: load_real_data_demo.py
src/mapper_copilot/: api.py  config.py  evaluation.py  models.py  ui.py  ui_helpers.py  ui_helpers_inline.py  ui_simple_render.py
src/mapper_copilot/core/: __init__.py  suggester.py
src/mapper_copilot/ingestion/: excel_loader.py
tests/: test_api.py  test_embeddings.py  test_evaluation.py  test_excel_loader.py  test_integration_e2e.py  test_llm.py  test_rerankers.py  test_retrieval.py  test_suggester.py  test_ui.py  test_vector_store.py
(+6 files in other folders)
