[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapper-copilot"
version = "0.1.0"
description = "AI-Assisted Mapper Suggester: RAG-based SLCP→RSC mapping suggestion using semantic search + LLM reasoning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@lululemon.com"}
]
keywords = ["mapper", "slcp", "rsc", "rag", "semantic-search", "llm", "bedrock"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.285",
]
faiss = [
    "faiss-cpu>=1.7.4",
]
local-embeddings = [
    "sentence-transformers>=2.2.0",
]
llm-reranker = [
    "anthropic>=0.18.0",
]

[project.urls]
Repository = "https://github.com/lululemon/mapper-copilot"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
